§22 revised, some tweaks to material on the constituents of interpretations, practical visual aids for quantifier semantics, esp. nested quantifiers, and some detail on why we avoid alternative approaches.

--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -1102,7 +1102,7 @@ Leibniz' Law certainly entails that identical things are indistinguishable, shar
 
 
 
-\section{There are at Least …}
+\section{There are at Least …} \label{s:atleast}
 
 So far an identity predicate might seem useful in a few cases, like pseudonyms, but a bit niche. In fact, adding it to our language gives us the ability to say lots of things we cannot hope to say without it. In particular, the identity predicate gives us the ability to \emph{count} – to quantify our quantifiers, and say how many things there are of a particular kind. Indeed, it is tempting to argue that the concept of counting depends on the prior concept of numerical distinctness.
 
@@ -1314,7 +1314,7 @@ Bertrand Russell offered an influential account of definite descriptions that mi
 
 Thus Russell offered a systematic paraphrase of sentences involving definite descriptions along these lines:\footnote{Bertrand Russell (1905) `On Denoting', \emph{Mind} \textbf{14}, pp.\ 479–93; see also Russell (1919) \emph{Introduction to Mathematical Philosophy}, London: Allen and Unwin, ch.\ 16.}
 	\begin{align*}
-		\text{the \meta{F} is \meta{G} \textbf{iff} }&\text{there is at least one \meta{F}, \emph{and}}\\
+		\text{the \meta{F} is \meta{G}  iff: }&\text{there is at least one \meta{F}, \emph{and}}\\
 	&\text{there is at most one \meta{F}, \emph{and}}\\	
 	&\text{every \meta{F} is \meta{G}}
 \end{align*}
