--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -29,7 +29,7 @@ This version of \forallxadl\ is current as of \today.
 
 \medskip\thispagestyle{empty}%
 
-This book is a derivative work created by Antony Eagle, based upon Tim Button's 2016 Cambridge version of P.D.\ Magnus's \forallx\ (version 1.29). There are pervasive substantive changes in content, theoretical approach, coverage, and appearance. 
+This book is a derivative work created by Antony Eagle, based upon Tim Button's 2016 Cambridge version of P.D.\ Magnus's \forallx\ (version 1.29). There are pervasive substantive changes in content, theoretical approach, coverage, and appearance. (For one thing, it's more than twice as long.)
 
 You can find the most up to date version of \forallxadl\ at \href{https://github.com/antonyeagle/forallx-adl}{\nolinkurl{github.com/antonyeagle/forallx-adl}}. 
 
@@ -56,7 +56,7 @@ Typesetting was carried out entirely in \XeLaTeX\ using the \texttt{Memoir} clas
 
 \chapter*{How to Use This Book}
 
-This book has been designed for use in conjunction with the University of Adelaide courses \textsc{phil} 1110 \emph{Introduction to Logic} and \textsc{phil 1111ol} \emph{Introduction to Logic Online}. But it is suitable for self-study as well. I have included a number of features to assist your learning. \begin{itemize}
+This book has been designed for use in conjunction with the University of Adelaide courses \textsc{phil} 1110 \emph{Introduction to Logic} and \textsc{phil 1111ol} \emph{Introductory Logic}. But it is suitable for self-study as well. I have included a number of features to assist your learning. \begin{itemize}
 	\item \forallx\ is divided into seven chapters, each further divided into sections and subsections. The sections are continuously numbered. \begin{itemize}
 		\item Chapter \ref{ch.intro} gives an overview of how I understand the project of formal logic;
 		\item Chapters \ref{ch.TFL}–\ref{ch.TruthTables} cover sentential or truth-functional logic;
