--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -39,6 +39,8 @@ This is an important idea about \TFL\ sentence connectives. They are each associ
 		\emph{Every connective in \TFL\ is truth-functional.}}
 It turns out that we don't need to know anything more about the atomic sentences of \TFL\ than their truth values to assign a truth value to those nonatomic, or \define{compound}, sentences. More generally, the truth value of any compound sentence depends only on the truth value of the subsentences that comprise it. In order to know the truth value of `$(D \eand E)$', for instance, you only need to know the truth value of `$D$' and the truth value of `$E$'. In order to know the truth value of `$\bigl( (D \eand E) \eor F\bigr)$', you need only know the truth value of `$(D \eand E)$' and `$F$'. And so on. This is fact a good part of the reason why we chose these connectives, and chose their English near-equivalents as our structural words. To determine the truth value of some \TFL\ sentence, we only need to know the truth value of its components. This is why the study of \TFL\ is termed \emph{truth-functional logic}.
 
+
+
 \section{Schematic Truth Tables}\label{s:SchematicTruthTables}
 
 We introduced five connectives in chapter \ref{ch.TFL}. To give substance to the claim that they are truth-functional, we simply need to explain how each connective yields a truth value for a compound sentence with that connective as its main connective, when supplied with the truth values of its \define{immediate subsentences}. In any sentence of the form $\meta{A} \eif \meta{B}$, $\meta{A}$ and $\meta{B}$ are the immediate subsentences, since those combine with the main connective to form the sentence.
@@ -46,6 +48,8 @@ We introduced five connectives in chapter \ref{ch.TFL}. To give substance to the
 Not only does the truth value of a compound sentence of \TFL\ depend only on the truth values assigned to its subsentences, it does so \emph{uniquely}, because it is a function. We may happily refer to \emph{the} truth value of \meta{A} as determined by its constituents. This means we may represent the pattern of dependence of compound sentence truth values on immediate subsentence truth values in a simple table, like those we saw in §\ref{ss.function}. These tables show how to relate the input truth values to output truth values for any sentence connective. For convenience, we shall represent the truth value True by `T' and the value False by `F'. (Just to be clear, the two truth values are True and False; the truth values are not \emph{letters}!) 
 
 These truth tables completely characterise how the connectives of \TFL\ behave. Accordingly, we can take these schematic truth tables as giving the \emph{meanings} of the connectives. The truth function associated with a connective captures their entire contribution to the sentences in which they appear.
+
+A language, natural or artificial, is \define{compositional} iff the meaning of a complex sentence is the product of the syntactic structure of the sentence and the meanings of its constituents. In \TFL, the only dimension of meaning is truth value. So in \TFL, we have a special case of compositionality: the truth value of a complex sentence depends on the syntax and the truth value of the constituent atomic sentences.
 
 \paragraph{Negation} For any sentence \meta{A}: If \meta{A} is true, then `\enot\meta{A}' is false. If `\enot\meta{A}' is true, then \meta{A} is false. We can summarize this dependence in the \define{schematic truth table} for negation, which shows how any sentence with negation as its main connective has a truth value depending on the truth value of its immediate subsentence:
 \begin{center}
