--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -12,7 +12,7 @@
 \setmainfont[Numbers=OldStyle,Ligatures={Common}]{Constantia} % Æ loathes Computer Modern
 \setsansfont[Numbers=OldStyle,Ligatures={Common}]{Calibri}
 \setmonofont[Scale=MatchLowercase]{Consolas}
-\usepackage[math-style=ISO,mathbf=sym,bold-style=ISO,mathsf=text]{unicode-math}
+\usepackage[math-style=ISO,mathbf=sym,bold-style=ISO,mathsf=text,warnings-off={mathtools-colon,mathtools-overbracket}]{unicode-math}
 \setoperatorfont{\rmfamily}
 \setmathfont[Scale=MatchLowercase]{Cambria Math}
 % \setmathfont[range=up/{num},Numbers=OldStyle]{Constantia}
