--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -111,6 +111,7 @@
 \newcommand*{\ntuple}[1]{\mbox{\ensuremath{\mathopen{\openntuple}}#1\ensuremath{\mathclose{\closentuple}}}} 
 % definitions
 \newcommand*{\define}[1]{\textsc{\lowercase{#1}}\index{#1}}
+\newcommand*{\idefine}[1]{\textsc{\emph{\lowercase{#1}}}\index{#1@\emph{#1}}}
 \newcommand{\subs}[2]{\vert_{#1\curvearrowright #2}} % Æ notation for uniform substitution of #1 for #2
 
 %    ****************************************
