--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -913,6 +913,8 @@ I cannot emphasise enough that these are different notions. But I can emphasise 
 
 Once you have internalised this point, continue reading. 
 
+\section{Connecting Entailment and Provability}
+
 Although our semantic and proof-theoretic notions are different, there is a deep connection between them. To explain this connection, I shall start by considering the relationship between logical truths and theorems.
 
 To show that a sentence is a theorem, you need only perform a proof. Granted, it may be hard to produce a twenty line proof, but it is not so hard to check each line of the proof and confirm that it is legitimate; and if each line of the proof individually is legitimate, then the whole proof is legitimate. Showing that a sentence is a logical truth, though, requires reasoning about all possible interpretations. Given a choice between showing that a sentence is a theorem and showing that it is a logical truth, it would be easier to show that it is a theorem.
@@ -935,11 +937,17 @@ It is intuitive that provability and semantic entailment should agree. But – l
 
 We showed part of this result along the way, actually. All those little observations I made about how our proof rules were good each took the form of an argument that whenever $\meta{A}_{1}, \meta{A}_{2}, …, \meta{A}_{n} \proves\meta{B}$, then also $\meta{A}_{1}, \meta{A}_{2}, …, \meta{A}_{n} \entails\meta{B}$. This is sometimes known as the \define{soundness} of our proof system, that whenever you can prove something, there is a corresponding valid argument.
 
+\section{Next Steps in Logic}\label{s:nextsteps}
+
 The other half of this result is more demanding. This is the \define{completeness} of our proof system, that whenever there is a valid argument, there is a proof. It is somewhere around this point, of demonstrating the completeness half of the agreement between  provability and semantic entailment, when introductory logic becomes intermediate logic. More than one of the authors of this book have written distinct sequels in which the completeness of \TFL\ is established, along with other results of a `metalogical' flavour. The interested student is directed to these texts: \begin{itemize}
 	\item Tim Button's book is \emph{Metatheory}; it covers just \TFL, and some of the results there were actually covered in this book already, notably results around expressiveness of \TFL\ in §\ref{s:expressiveness}. \emph{Metatheory} is available at \href{http://www.homepages.ucl.ac.uk/~uctytbu/Metatheory.pdf}{\nolinkurl{www.homepages.ucl.ac.uk/~uctytbu/Metatheory.pdf}} It should be accessible for self-study by students who have successfully completed this course.
 
 \item Antony Eagle's book \emph{Elements of Deductive Logic} goes rather further than \emph{Metatheory}, including direct proofs of Compactness for \TFL, consideration of alternative derivation systems, discussion of computation and decidability, and metatheory for \FOL. It is available at \href{https://github.com/antonyeagle/edl}{\nolinkurl{github.com/antonyeagle/edl}}.
 \end{itemize}
+
+tense example from §\ref{FOL.semantics}.
+
+
 
 \keyideas{
 	\item The two turnstiles are distinct concepts. But they coincide: every provable argument corresponds to an entailment, and \emph{vice versa}.
@@ -979,3 +987,4 @@ Is $\meta{A}_1, \meta{A}_2, …, \meta{A}_n \ttherefore \meta{C}$ \textbf{valid}
 \end{center}
 \end{sidewaystable}
 
+\chapter{Next Steps in Logic}
